--- a/src/Vagrantfile
+++ b/src/Vagrantfile
@@ -1,22 +1,56 @@
 Vagrant.configure("2") do |config|
-  
-  # focal64 - ubuntu 20.04
+  # focal - Ubuntu 20.04 LTS
   config.vm.box = "ubuntu/focal64"
-  config.vm.box_version = "20240821.0.1"
-
+  config.vm.box_check_update = false
+  config.vm.synced_folder "./services", "/home/vagrant/services"
+  config.vm.provision "shell", path: "./services/scripts/install-docker.sh"
+  config.vm.synced_folder ".", "/vagrant"
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "my_vm"
     vb.gui = false
-    vb.memory = "1024"
-    vb.cpus = 1
+    vb.memory = "2048"
+    vb.cpus = 2
   end
 
-  config.vm.network "private_network", type: "dhcp"
+  config.vm.define "manager01" do |manager|
+    manager.vm.hostname = "manager01"
+    manager.vm.network "private_network", ip: "192.168.56.2"
+    manager.vm.provision "file",
+      source: "./docker-compose.yml",
+      destination: "/home/vagrant/docker-compose.yml"
+    manager.vm.provision "shell", inline: <<-SHELL
+      if [ -d "/home/vagrant/services" ]; then
+        echo "services are exists"
+      else
+        echo "error: services are not found"
+      fi
+      bash /home/vagrant/services/scripts/swarm-init.sh
+    SHELL
+  end
 
-  config.vm.synced_folder "./services", "/vagrant"
+  config.vm.define "worker01" do |worker|
+    worker.vm.hostname = "worker01"
+    worker.vm.network "private_network", ip: "192.168.56.3"
+    worker.vm.provision "shell", inline: <<-SHELL
+      if [ -d "/home/vagrant/services" ]; then
+        echo "services are exists"
+      else
+        echo "error: services are not found"
+      fi
+      bash /home/vagrant/services/scripts/swarm-join.sh
+    SHELL
+  end
 
-  config.vm.provision "shell", inline: <<-SHELL
-    echo "VM was started"
-  SHELL
 
+  config.vm.define "worker02" do |worker|
+    worker.vm.hostname = "worker02"
+    worker.vm.network "private_network", ip: "192.168.56.4"
+    worker.vm.provision "shell", inline: <<-SHELL
+      if [ -d "/home/vagrant/services" ]; then
+        echo "services are exists"
+      else
+        echo "error: services are not found"
+      fi
+      bash /home/vagrant/services/scripts/swarm-join.sh
+    SHELL
+  end
 end
