--- a/src/services/gateway-service/Dockerfile
+++ b/src/services/gateway-service/Dockerfile
@@ -22,4 +22,10 @@ RUN apk add --no-cache bash && \
     chmod +x wait-for-it.sh
 EXPOSE 8087
 
-ENTRYPOINT ["./wait-for-it.sh", "postgres:5432", "-t", "60", "--", "java", "-jar", "app.jar"]
+ENTRYPOINT ["./wait-for-it.sh", "session:8081", "-t", "30", "--", \
+            "./wait-for-it.sh", "hotel:8082", "-t", "30", "--", \
+            "./wait-for-it.sh", "booking:8083", "-t", "30", "--", \
+            "./wait-for-it.sh", "payment:8084", "-t", "30", "--", \
+            "./wait-for-it.sh", "loyalty:8085", "-t", "30", "--", \
+            "./wait-for-it.sh", "report:8086", "-t", "30", "--", \
+            "java", "-jar", "app.jar"]
