--- a/materials/old-compose.yml
+++ b/materials/old-compose.yml
@@ -1,20 +1,7 @@
 version: '3.8'
 services:
-    proxy:
-        image: nginx:1.24-alpine
-        ports:
-            - 8081:8081
-            - 8087:8087
-        volumes:
-            - ./services/nginx-proxy/nginx.conf:/etc/nginx/nginx.conf
-        deploy:
-            replicas: 1
-            placement:
-                constraints: [node.role == manager]
-        networks:
-            - app-network
     postgres:
-        image: aggarego/services_postgres:1.0
+        build: ./services/database
         environment:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: "postgres"
@@ -32,9 +19,9 @@ services:
         networks:
             - app-network
     session:
-        image: aggarego/services_session:1.0
-        # ports:
-        #     - 8081:8081
+        build: ./services/session-service
+        ports:
+            - 8081:8081
         environment:
             POSTGRES_HOST: postgres
             POSTGRES_PORT: 5432
@@ -43,14 +30,10 @@ services:
             POSTGRES_DB: users_db
         depends_on:
             - postgres
-            - proxy
-        deploy:
-            placement:
-                constraints: [node.role == manager]
         networks:
             - app-network
     hotel:
-        image: aggarego/services_hotel:1.0
+        build: ./services/hotel-service
         environment:
             POSTGRES_HOST: postgres
             POSTGRES_PORT: 5432
@@ -62,7 +45,7 @@ services:
         networks:
             - app-network
     payment:
-        image: aggarego/services_payment:1.0
+        build: ./services/payment-service
         environment:
             POSTGRES_HOST: postgres
             POSTGRES_PORT: 5432
@@ -74,7 +57,7 @@ services:
         networks:
             - app-network
     loyalty:
-        image: aggarego/services_loyalty:1.0
+        build: ./services/loyalty-service
         environment:
             POSTGRES_HOST: postgres
             POSTGRES_PORT: 5432
@@ -86,7 +69,7 @@ services:
         networks:
             - app-network
     report:
-        image: aggarego/services_report:2.0
+        build: ./services/report-service
         environment:
             POSTGRES_HOST: postgres 
             POSTGRES_PORT: 5432
@@ -105,7 +88,7 @@ services:
         networks:
             - app-network
     booking:
-        image: aggarego/services_booking:2.0
+        build: ./services/booking-service
         environment:
             POSTGRES_HOST: postgres
             POSTGRES_PORT: 5432
@@ -133,9 +116,9 @@ services:
         networks:
             - app-network
     gateway:
-        image: aggarego/services_gateway:2.0
-        # ports:
-        #     - 8087:8087
+        build: ./services/gateway-service
+        ports:
+            - 8087:8087
         environment:
             SESSION_SERVICE_HOST: session
             SESSION_SERVICE_PORT: 8081
@@ -150,23 +133,18 @@ services:
             REPORT_SERVICE_HOST: report
             REPORT_SERVICE_PORT: 8086
         depends_on:
-            - proxy
             - session
             - hotel
             - booking
             - payment
             - loyalty
             - report
-        deploy:
-            placement:
-                constraints: [node.role == manager]
         networks:
             - app-network
-
 volumes:
   postgres_data:
   rabbitmq_data:
 
 networks:
   app-network:
-    driver: overlay
+    driver: bridge
