--- a/src/services/booking-service/Dockerfile
+++ b/src/services/booking-service/Dockerfile
@@ -22,4 +22,9 @@ RUN apk add --no-cache bash && \
     chmod +x wait-for-it.sh
 EXPOSE 8083
 
-ENTRYPOINT ["./wait-for-it.sh", "postgres:5432", "-t", "60", "--", "java", "-jar", "app.jar"]
+ENTRYPOINT ["./wait-for-it.sh", "postgres:5432", "-t", "60", "--", \
+            "./wait-for-it.sh", "rabbit_mq:5672", "-t", "30", "--", \
+            "./wait-for-it.sh", "hotel:8082", "-t", "30", "--", \
+            "./wait-for-it.sh", "payment:8084", "-t", "30", "--", \
+            "./wait-for-it.sh", "loyalty:8085", "-t", "30", "--", \
+            "java", "-jar", "app.jar"]
